--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -10,7 +10,7 @@
         <title>News Project</title>
 
         <!-- Styles -->
-        <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     </head>
 
     <body>
